# qianrushi

./: .gitignore  README.md  run_real_robot.sh
1_Core_Algorithm/: CMakeLists.txt
1_Core_Algorithm/include/: VisionCore.h
1_Core_Algorithm/src/: VisionCore.cpp
2_Sim_Environment/scripts/: start_demo.sh  start_real_demo.sh
2_Sim_Environment/src/library_gazebo/: CMakeLists.txt  package.xml
2_Sim_Environment/src/library_gazebo/config/: library_semantic_map.json  nav2_params.yaml  real_route_primitives.json  slam_toolbox_online_async.yaml
2_Sim_Environment/src/library_gazebo/launch/: bringup.launch.py  real_bringup.launch.py
2_Sim_Environment/src/library_gazebo/scripts/: llm_navigator.py  llm_voice_navigator.py  patrol_dashboard.py  patrol_knowledge.py  patrol_mission.py  patrol_web_dashboard.py  real_camera_publisher.py  real_goal_driver.py  real_motion_bridge.py  vision_node.py
2_Sim_Environment/src/library_gazebo/urdf/: patrol_robot.urdf
2_Sim_Environment/src/library_gazebo/worlds/: library.world
2_Sim_Environment/src/sim_bridge_node/: CMakeLists.txt  package.xml
2_Sim_Environment/src/sim_bridge_node/src/: vision_bridge.cpp
3_Real_Deployment/tools/: encoder_probe.cpp  encoder_slow_roll_test.cpp  micro_motor_test.cpp  safe_motor_test.cpp  safe_servo_test.cpp
3_Real_Deployment/user/: CMakeLists.txt  cross.cmake  main.cpp
4_Voice_Motion_Test/: CMakeLists.txt  README.md  build.sh  程序使用完整流程.md
4_Voice_Motion_Test/config/: voice_motion_config.ini
4_Voice_Motion_Test/scripts/: S99_voice_motion_test
4_Voice_Motion_Test/src/: voice_motion_test.cpp
5_Square_Path_Test/: CMakeLists.txt  README.md  build.sh  cross.cmake
5_Square_Path_Test/config/: square_path_config.ini
5_Square_Path_Test/src/: square_path_voice_test.cpp
LS2K0301_Library/aruco_board_stream/: CMakeLists.txt  README.md  board_stream_server.cpp  book_database.json  pc_aruco_stream_client.py  pc_book_finder_client.py  pc_book_finder_voice_client.py  命令.md
LS2K0301_Library/aruco_board_stream/build_board/: board_stream_server  cmake_install.cmake
docs/pmon_autoboot_repair/: 00_executive_summary.md  01_recovery_script_design.md  (+8 more)
library_patrol_final_demo/: .env.example  README.md  requirements.txt
patches/: pmon_ignore_unknown_uart_input.patch
robot_2k03011/robot_2k0301/: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists（复件）.txt  README.md
robot_2k03011/robot_2k0301/backend/: README.md
robot_2k03011/robot_2k0301/board_app/: CMakeLists.txt  main.cpp
robot_2k03011/robot_2k0301/board_app/control/: pid.cpp  pid.h
robot_2k03011/robot_2k0301/board_app/hardware/: lidar_scanner.cpp  lidar_scanner.h  robot_hardware.cpp  robot_hardware.h
robot_2k03011/robot_2k0301/board_app/mission/: mission_orchestrator.cpp  mission_orchestrator.h
robot_2k03011/robot_2k0301/board_app/navigation/: board_navigation_main.cpp  frontier_explorer.cpp  frontier_explorer.h  hybrid_astar.cpp  hybrid_astar.h  motion_control.cpp  motion_control.h  navigation_core.cpp  navigation_core.h  navigation_safety.cpp  navigation_safety.h  navigation_types.h  occupancy_grid.cpp  occupancy_grid.h  odometry.cpp  odometry.h  path_follower.cpp  path_follower.h  task_queue.h
robot_2k03011/robot_2k0301/board_app/sensors/: smoke_sensor.cpp  smoke_sensor.h
robot_2k03011/robot_2k0301/board_app/services/: board_services_main.cpp  event_store.cpp  event_store.h  process_executor.cpp  process_executor.h
robot_2k03011/robot_2k0301/board_app/utils/: config.cpp  config.h  logger.cpp  logger.h  timestamp.h
robot_2k03011/robot_2k0301/board_app/vision/: aruco_book_detector.cpp  aruco_book_detector.h  board_vision_main.cpp  detection_tracker.cpp  detection_tracker.h  lost_item_detector.cpp  lost_item_detector.h
robot_2k03011/robot_2k0301/board_app/voice/: ci1302.cpp  ci1302.h
robot_2k03011/robot_2k0301/config/: map.yaml  robot.yaml  robot_bringup.yaml  routes.yaml  tasks.yaml
robot_2k03011/robot_2k0301/docs/: SLAM_MAPPING.md  architecture.md  bringup_checklist.md
robot_2k03011/robot_2k0301/maps/: library.data  library.pgm  library.posegraph  library.yaml
robot_2k03011/robot_2k0301/patches/: LS2K0301_Library-local-changes.patch
robot_2k03011/robot_2k0301/ros2_ws/: README.md
robot_2k03011/robot_2k0301/ros2_ws/src/robot_lidar_bridge/: package.xml  setup.cfg  setup.py
robot_2k03011/robot_2k0301/ros2_ws/src/robot_lidar_bridge/config/: ackermann_navigation.yaml  amcl.yaml  lidar.rviz  mapping.rviz  navigation.rviz  odometry.yaml  slam_localization.yaml  slam_mapping.yaml
robot_2k03011/robot_2k0301/ros2_ws/src/robot_lidar_bridge/launch/: lidar_rviz.launch.py  localization.launch.py  localization_amcl.launch.py  mapping.launch.py  navigation.launch.py
robot_2k03011/robot_2k0301/ros2_ws/src/robot_lidar_bridge/robot_lidar_bridge/: ackermann_a_star.py  ackermann_path_planner.py  board_clock.py  frontier_explorer.py  goal_navigator.py  ips200_map_stream.py  keyboard_teleop.py  lidar_deskew.py  mapping_guard.py  motion_control.py  navigation_dashboard.py  navigation_safety.py  navigation_safety_logic.py  occupancy_grid_cells.py  tcp_laser_scan.py  tcp_odometry.py
robot_2k03011/robot_2k0301/ros2_ws/src/robot_lidar_bridge/test/: test_ackermann_a_star.py  test_frontier_explorer.py  test_motion_control.py  test_navigation_safety_logic.py  test_tcp_laser_scan.py
robot_2k03011/robot_2k0301/ros2_ws/src/robot_lidar_bridge/web/: app.js  index.html  styles.css
robot_2k03011/robot_2k0301/scripts/: S20_cp210x_lidar  board_diagnostics.sh  board_network_diagnose.sh  board_preflight.sh  build_host.sh  build_ls2k0301.sh  calibrate_encoder_odometry.py  check_board_connection.sh  check_map_quality.py  check_mapping_inputs.py  deploy_ls2k0301.sh  fetch_ls2k0301_library.sh  install_board_autonetwork.sh  install_localization_deps.sh  monitor_imu_yaw.py  package_ls2k0301.sh  save_slam_map.sh  send_board_command.sh  start_autonomous_mapping.sh  start_board_runtime.sh  start_keyboard_teleop.sh  start_lidar_rviz.sh  start_localization.sh  start_mapping.sh  start_mapping_keyboard.sh  start_navigation.sh  steering_calibration.py
(+73 files in other folders)
